--- a/PhongKham/Views/Home/Index.cshtml
+++ b/PhongKham/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                 <ul>
                     <li data-transition="random" data-slotamount="7" data-masterspeed="1000" data-thumb="upload/hinhanh/tong-dai-tu-van-suc-khoe-sinh-san-1900-64251653584700_1349x460.jpg">
                         <div class="slotholder">
-                            <div class="tp-bgimg defaultimg" data-lazyload="undefined" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat" data-lazydone="undefined" src="upload/hinhanh/tong-dai-tu-van-suc-khoe-sinh-san-1900-64251653584700_1349x460.jpg" data-src="upload/hinhanh/tong-dai-tu-van-suc-khoe-sinh-san-1900-64251653584700_1349x460.jpg"></div>
+                            <div class="tp-bgimg defaultimg" data-lazyload="undefined" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat" data-lazydone="undefined" src="~/assets/hinhanh/tong-dai-tu-van-suc-khoe-sinh-san-1900-64251653584700_1349x460.jpg" data-src="upload/hinhanh/tong-dai-tu-van-suc-khoe-sinh-san-1900-64251653584700_1349x460.jpg"></div>
                             <div class="content_slideshow">
                                 <div class="row">
                                     <div class="info">
