--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
           content="upgrade-insecure-requests" />
     <link rel="alternate" hreflang="vi-vn" href="#" />
     <meta name="robots" content="index, follow" />
-    <link href="upload/hinhanh/favicon.png"
+    <link href="~/assets/hinhanh/favicon.png"
           rel="shortcut icon"
           type="image/x-icon" />
     <meta name="revisit-after" content="1 days" />
@@ -34,14 +34,14 @@
     <meta name="ICBM" content="10.755404,106.661945" />
     <!-- Share facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="upload/hinhanh/85123_banner_vi.png" />
+    <meta property="og:image" content="~/assets/hinhanh/85123_banner_vi.png" />
     <meta property="og:image:alt" content="Bệnh viện Hùng Vương" />
     <meta property="og:title" content="Bệnh viện Hùng Vương" />
     <meta property="og:description" content="Bệnh viện Hùng Vương" />
     <meta property="og:site_name" content="Bệnh Viện Hùng Vương" />
     <meta property="og:url" content="https://bvhungvuong.vn:443/" />
     <!-- Bootstrap CSS-->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/lib/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome -->
     <link rel="stylesheet"
           href="https://bvhungvuong.vn/admin/css/font-awesome.min.css" />
@@ -50,36 +50,34 @@
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
           crossorigin="anonymous"
           referrerpolicy="no-referrer" />
-
-    <!-- My main CSS -->
-    <link href="~/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="~/css/newstyle.css" rel="stylesheet" type="text/css" />
+    <!-- Slide -->
+    <!-- <link rel="stylesheet" type="text/css" href="css/wow.style.css" />
+    <link rel="stylesheet" type="text/css" href="css/revslider.css" />
+    <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
+    <link rel="stylesheet" type="text/css" href="css/owl.theme.css" /> -->
+    <!-- SmartMenus core CSS (required) -->
+    <link href="~/css/lib/sm-core-css.css" rel="stylesheet" type="text/css" />
+    <!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
+    <link href="~/css/lib/sm-blue.css" rel="stylesheet" type="text/css" />
     <!-- Fancy box -->
     <link rel="stylesheet"
           type="text/css"
           href="~/css/fancybox/jquery.fancybox8cbb.css?v=2.1.5"
           media="screen" />
     <!-- Slick -->
-    <link rel="stylesheet" type="text/css" href="~/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/lib/slick.css" />
     <link rel="stylesheet"
-          href="~/css/splide.min.css" />
-    <!-- Slide -->
-    <!-- <link rel="stylesheet" type="text/css" href="css/wow.style.css" />
-    <link rel="stylesheet" type="text/css" href="css/revslider.css" />
-    <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
-    <link rel="stylesheet" type="text/css" href="css/owl.theme.css" /> -->
-    <link rel="stylesheet" type="text/css" href="~/css/bootstrap.min.css" />
-    <!-- SmartMenus core CSS (required) -->
-    <link href="~/css/sm-core-css.css" rel="stylesheet" type="text/css" />
-    <!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
-    <link href="~/css/sm-blue.css" rel="stylesheet" type="text/css" />
+          href="~/css/lib/splide.min.css" />
     <!-- Scroll -->
-    <!-- <link
-      rel="stylesheet"
-      href="css/jquery.simplyscroll.css"
-      media="all"
-      type="text/css"
-    /> -->
+    <link rel="stylesheet"
+          href="~/css/lib/jquery.simplyscroll.css"
+          media="all"
+          type="text/css" />
+    <!-- My main CSS -->
+    <link href="~/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/main.scss rel="stylesheet" type="text/css" />
+    <link href="~/css/newstyle.css" rel="stylesheet" type="text/css" />
+   
 </head>
 <body>
     <header>
@@ -131,10 +129,10 @@
             <div class="menu-center">
                 <ul id="main-menu" class="sm sm-blue">
                     <li class="menu-line activem">
-                        <a href="index-2.html">Trang chủ</a>
+                        <a asp-controller="Home" asp-action="Index">Trang chủ</a>
                     </li>
                     <li class="menu-line">
-                        <a href="gioi-thieu.html">Giới thiệu</a>
+                        <a asp-controller="GioiThieu" asp-action="Index" >Giới thiệu</a>
                         <ul>
                             <li>
                                 <a href="gioi-thieu/gioi-thieu-benh-vien-967/index.html">Giới thiệu bệnh viện</a>
@@ -479,7 +477,7 @@
                     </li>
                     <li class="menu-line">
                         <a href="index.html">
-                            <img src="img/vn.png"
+                            <img src="~/assets/icon/vn.png"
                                  class="quick-link-image"
                                  alt="Tiếng Việt"
                                  width="25"
@@ -488,7 +486,7 @@
                     </li>
                     <li class="menu-line">
                         <a href="index.html">
-                            <img src="img/en.png"
+                            <img src="~/assets/icon/en.png"
                                  class="quick-link-image"
                                  alt="Tiếng Anh"
                                  width="25"
@@ -838,20 +836,20 @@
             <div>Phòng khám Decacare. All rights reserved.</div>
         </div>
     </div>
-     
-    <script type="text/javascript" src="~/lib/lib/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="~/lib/lib/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="~/lib/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/lib/lib/splide.min.js"></script>
+    <!-- SmartMenus jQuery plugin -->
+    <script type="text/javascript" src="~/js/lib/splide.min.js"></script>
+    <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.js"></script>
+    <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/css/fancybox/jquery.fancybox8cbb.js"></script>
     <!-- Slick -->
-    <script type="text/javascript" src="~/lib/lib//slick.min.js"></script>
-    <!-- SmartMenus jQuery plugin -->
-    <script type="text/javascript" src="~/lib/lib/jquery.smartmenus.js"></script>
+    <script type="text/javascript" src="~/js/lib/slick.min.js"></script>
+  
     <!-- Scroll -->
-    <!-- <script type="text/javascript" src="js/jquery.simplyscroll.js"></script> -->
+    <script type="text/javascript" src="~/js/lib/jquery.simplyscroll.js"></script>
     <!-- My custom js -->
-    <script type="text/javascript" src="~/lib/lib/thanhtam.js"></script>
+    <script type="text/javascript" src="~/js/lib/thanhtam.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
