--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
           crossorigin="anonymous"
           referrerpolicy="no-referrer" />
     <!-- SmartMenus core CSS (required) -->
-    <link href="~/css/lib/sm-core-css.css" rel="stylesheet" type="text/css" />
+   @*  <link href="~/css/lib/sm-core-css.css" rel="stylesheet" type="text/css" />
     <!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
     <link href="~/css/lib/sm-blue.css" rel="stylesheet" type="text/css" />   
     <!-- Slick -->
@@ -56,7 +56,11 @@
     <!-- My main CSS -->
     <link href="~/css/main.css rel="stylesheet" type="text/css" />
     <link href="~/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="~/css/newstyle.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/newstyle.css" rel="stylesheet" type="text/css" /> *@
+    <link href="~/css/lib.min.css" rel="stylesheet" type="text/css" />
+
+    <link href="~/css/site.min.css" rel="stylesheet" type="text/css" />
+
 
 </head>
 <body>
@@ -834,7 +838,7 @@
             <div>Phòng khám Decacare. All rights reserved.</div>
         </div>
     </div>
-    <!-- SmartMenus jQuery plugin -->
+  @*   <!-- SmartMenus jQuery plugin -->
     <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
@@ -843,7 +847,11 @@
     <script type="text/javascript" src="~/js/lib/jquery.smartmenus.js"></script>
    
     <!-- My custom js -->
-    <script asp-append-version="true" src="~/js/site.js"></script>
+    <script asp-append-version="true" src="~/js/site.js"></script> *@
+
+    <script type="text/javascript" src="~/js/lib.min.js"></script>
+    <script type="text/javascript" src="~/js/site.min.js"></script>
+
 
   
 
