--- a/PhongKham/wwwroot/css/style.css
+++ b/PhongKham/wwwroot/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
-/*@font-face{
+/*@import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
+@font-face{
 	font-family:womens_icons;src:url(../fonts/womens_icons.eot);font-weight:400;font-style:normal
 		}
 @font-face{
@@ -125,8 +125,8 @@ html,body,div,span{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical
          url('fonts/SFUFuturaBook.woff') format('woff'),
          url('fonts/SFUFuturaBook.ttf') format('truetype'),
          url('fonts/SFUFuturaBook.svg#SFUFuturaBook') format('svg');
-}
-*/
+}*/
+
 /*----------basic----------------*/
 html,body {font-family:Arial, Helvetica, sans-serif; font-size: 14px; line-height: 25px; text-rendering: optimizeLegibility;}
 a { text-decoration:none; color:#f19737; transition:all 0.5s; -webkit-transition:all 0.5s; -moz-transition:all 0.5s;}
@@ -945,7 +945,7 @@ ul.hero-banner-btns a span {
 }
 .group-contact-ft a img{
     width: 100%;
-    max-width:100%
+    max-width:100%;
     vertical-align: middle;
 }
 .cal-fts::before {
@@ -1169,7 +1169,7 @@ ul.hero-banner-btns a span {
 }
 .m_hero .content.is_wysiwyg ul li a:after, .m_pagination_numbered .last_page .after, .m_pagination_numbered .last_page:after, .m_result_path li .after, .m_result_path li:after {
     font-family: womens_icons;
-    content: "";
+    content: "»";
     speak: none;
     font-style: normal;
     font-weight: 400;
@@ -1354,7 +1354,7 @@ ul.hero-banner-btns a span {
     opacity: .75;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}s
+}
 @media only screen and (min-width: 1140px)
 .slick-prev {
     border-radius: 10px 0 0 10px;
@@ -1538,7 +1538,7 @@ figcaption {
     line-height: 20px;
     color: #fff;
 }
-media only screen and (min-width: 1140px)
+@media only screen and (min-width: 1140px)
 .home-header.regular h1 {
     font-size: 2.8em!important;
 }
@@ -1812,7 +1812,7 @@ media only screen and (min-width: 1140px)
     background-color: #ffffff;
     border: medium none;
     border-radius: 30px;
-    box-shadow: 0 10px 40px -15px rgb(0 0 0 / 50%);
+    /*box-shadow: 0 10px 40px -15px rgb(0 0 0 / 50%);*/
     display: none;
     height: 50px;
     position: absolute;
