fix lỗi báo đỏ link

--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -838,19 +838,19 @@
             <div>Phòng khám Decacare. All rights reserved.</div>
         </div>
     </div>
-  @*   <!-- SmartMenus jQuery plugin -->
+    <!-- SmartMenus jQuery plugin -->
     <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/js/lib/fontawesome-all.min.js"></script>
     <script type="text/javascript" src="~/js/lib/splide.min.js"></script>
-    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.js"></script>
+    <script type="text/java script" src="~/js/lib/jquery.smartmenus.js"></script>
    
     <!-- My custom js -->
-    <script asp-append-version="true" src="~/js/site.js"></script> *@
+    <script asp-append-version="true" src="~/js/site.js"></script>
 
-    <script type="text/javascript" src="~/js/lib.min.js"></script>
-    <script type="text/javascript" src="~/js/site.min.js"></script>
+    @* <script type="text/javascript" src="~/js/lib.min.js"></script>
+    <script type="text/javascript" src="~/js/site.min.js"></script> *@
 
 
   
