--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -39,13 +39,19 @@
     <meta property="og:site_name" content="Bệnh Viện Hùng Vương" />
     <meta property="og:url" content="https://bvhungvuong.vn:443/" />
     <!-- Bootstrap CSS-->
-    <link href="~/css/lib/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    
     <!-- Font Awesome -->
     <link rel="stylesheet"
           href="~/css/lib/fontawesome-all.min.css"
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
           crossorigin="anonymous"
           referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="stylesheet" href="~/css/newstyle.css" />
+    <link rel="stylesheet" href="~/css/lib/splide.min.css" />
+    <link rel="stylesheet" href="~/css/lib/sm-core-css.css" />
+    <link rel="stylesheet" href="~/css/lib/sm-blue.css" />
+    <link href="~/css/lib/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- SmartMenus core CSS (required) -->
    @*  <link href="~/css/lib/sm-core-css.css" rel="stylesheet" type="text/css" />
     <!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
@@ -57,9 +63,9 @@
     <link href="~/css/main.css rel="stylesheet" type="text/css" />
     <link href="~/css/style.css" rel="stylesheet" type="text/css" />
     <link href="~/css/newstyle.css" rel="stylesheet" type="text/css" /> *@
-    <link href="~/css/lib.min.css" rel="stylesheet" type="text/css" />
+    @* <link href="~/css/lib.min.css" rel="stylesheet" type="text/css" />
 
-    <link href="~/css/site.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/site.min.css" rel="stylesheet" type="text/css" /> *@
 
 
 </head>
@@ -68,7 +74,7 @@
         <div id="banner">
             <div class="center banner_d">
                 <div class="logo">
-                    <a asp-controller="Home" asp-action="Index">
+                    <a href="index.html">
                         <img src="~/assets/hinhanh/decaCare_5_anhlogo.png" alt="Logo" />
                         <div class="logo-slogan">
                             <h2>PHÍA SAU UNG THƯ LÀ CUỘC SỐNG</h2>
@@ -83,38 +89,24 @@
                 <div class="banner">
                     <div class="banner-text">
                         <h3>
-                            <span>
+                            <div>
                                 TRUNG TÂM PHÁT HIỆN SỚM UNG THƯ & CHĂM SÓC GIẢM NHẸ DECACARE
-                            </span>
-                            <br />
+                            </div>
                             <span><b>DT Liên hệ:</b> 092.889.1551</span>
                         </h3>
                     </div>
                 </div>
             </div>
             <div class="center banner_m">
-                <div class="logo">
-                    <a asp-controller="Home" asp-action="Index">
-                        <div class="logo-slogan">
-                            <h2>
-                                PHÍA SAU UNG THƯ LÀ CUỘC SỐNG <br />CÙNG BẠN NÂNG NIU CUỘC SỐNG
-                                NÀY
-                            </h2>
-                        </div>
-                    </a>
-                    <div class="logo-desc">
-                        <h3><b>Địa chỉ:</b> 8B, Nơ 8 KĐT Định Công, Hoàng Mai, Hà Nội</h3>
-                        <h3><b>Giờ làm việc:</b> 7h - 19h, từ thứ hai đến chủ nhật</h3>
-                    </div>
-                </div>
                 <div class="banner">
                     <div class="banner-text">
                         <h3>
-                            <span>
+                            <div>
                                 TRUNG TÂM PHÁT HIỆN SỚM UNG THƯ & CHĂM SÓC GIẢM NHẸ DECACARE
-                            </span>
-                            <br />
-                            <span><b>DT Liên hệ:</b> 092.889.1551</span>
+                            </div>
+                            <span><b>DT Liên hệ:</b> 092.889.1551</span><br />
+                            <span><b>Địa chỉ:</b> 8B, Nơ 8 KĐT Định Công, Hoàng Mai, Hà Nội</span><br />
+                            <span><b>Giờ làm việc:</b> 7h - 19h, từ thứ hai đến chủ nhật</span>
                         </h3>
                     </div>
                 </div>
@@ -124,10 +116,10 @@
             <div class="menu-center">
                 <ul id="main-menu" class="sm sm-blue">
                     <li class="menu-line activem">
-                        <a asp-controller="Home" asp-action="Index">Trang chủ </a>
+                        <a href="index.html">Trang chủ</a>
                     </li>
                     <li class="menu-line">
-                        <a asp-controller="GioiThieu" asp-action="Index">Thương hiệu</a>
+                        <a href="gioi-thieu.html">Thương hiệu</a>
                         <ul>
                             <li>
                                 <a href="gioi-thieu/gioi-thieu-benh-vien-967/index.html">Giới thiệu bệnh viện</a>
@@ -496,26 +488,13 @@
                     </li> -->
                 </ul>
             </div>
-            <div class="top-search" style="display: none">
-                <div class="input-group">
-                    <form id="search_2" method="post" action="#">
-                        <input class="form-control"
-                               id="keywords"
-                               name="keywords"
-                               placeholder="Nhập từ khóa tìm kiếm"
-                               onkeypress="doEnters(event)"
-                               value="" />
-                        <button type="button" onclick="onSearchs(event)">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </form>
-                </div>
-            </div>
         </div>
         <div id="smenu">
             <div class="smenu-wrapper">
                 <img src="~/assets/hinhanh/decaCare_5_anhlogo.png" />
-                <i class="fa fa-bars i-menu" aria-hidden="true"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                 </svg>
             </div>
         </div>
         <div id="menus">
@@ -807,50 +786,95 @@
 
       
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    
+        <main role="main">
             @RenderBody()
-            <div id="fb-root"></div>
+            
         </main>
-    </div>
+    
     <div id="back-top" style="cursor: pointer; border-radius: 50%;" title="Len Dau Trang."></div>
-    <div id="footer">
-        <div class="center w-clear">
-            <div class="ft-1">Số Tổng Đài: <span>(028) 3855 8532</span></div>
-            <div class="ft-2">
-                <p>
-                    Mỗi ý kiến đóng góp của bạn về dịch vụ là góp phần hoàn thiện hệ
-                    thống của chúng tôi.<br />
-                    Hãy liên lạc với chúng tôi nếu có gì không hài lòng, muốn chúng tôi
-                    thay đổi
-                </p>
+    <footer id="footer">
+        <!-- FOOTER 1 -->
+        <!-- FOOTER 2 -->
+        <div class="row margin2s footer">
+            <div class="col footer-slogan">
+                <h3>
+                    Phía sau ung thư là cuộc sống<br />
+                    DecaCare cùng bạn nâng niu cuộc sống này
+                </h3>
             </div>
-            <div class="ft-3">
-                <a href="hoi-dap.html">Gửi ý kiến đóng góp</a>
+            <div id="nav_menu-3" class="col-md-6 footer-fb">
+                <span class="widget-title">Follow kênh của chúng tôi</span>
+                <div class="is-divider small"></div>
+                <div class="menu-menu-trai-bo-mon-trung-tam-container">
+                    <div id="fb-root"></div>
+                    <script>
+                        (function (d, s, id) {
+                            var js,
+                                fjs = d.getElementsByTagName(s)[0];
+                            if (d.getElementById(id)) return;
+                            js = d.createElement(s);
+                            js.id = id;
+                            js.src =
+                                "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.7&appId=190731451258750";
+                            fjs.parentNode.insertBefore(js, fjs);
+                        })(document, "script", "facebook-jssdk");
+                    </script>
+                    <div class="fb-page dt"
+                         data-href="https://www.facebook.com/DecaCare"
+                         data-tabs="timeline"
+                         data-height="200"
+                         data-width="500"
+                         data-small-header="false"
+                         data-adapt-container-width="true"
+                         data-hide-cover="false"
+                         data-show-facepile="true"></div>
+                </div>
             </div>
-        </div>
+            <div id="nav_menu-4" class="col-md-6 footer-map">
+                <span class="widget-title">Bản đồ tới chúng tôi &nbsp;</span>
+                <div class="is-divider small"></div>
+                <div class="menu-menu-trai-chuong-trinh-dao-tao-container googlemap">
+                    <iframe allowfullscreen=""
+                            height="200"
+                            loading="lazy"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1862.613516916782!2d105.83023265789!3d20.9835345008416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjDCsDU5JzAwLjciTiAxMDXCsDQ5JzUyLjgiRQ!5e0!3m2!1svi!2s!4v1615044131261!5m2!1svi!2s"
+                            style="border: 0"
+                            width="500"></iframe>
+                </div>
+            </div>
 
-        <div class="ft-b">
-            <div>
-                Đang online: <b style="color: yellow">248</b> &nbsp;&nbsp; Tổng truy
-                cập: <b style="color: yellow">3772379</b>
-            </div>
-            <div>Phòng khám Decacare. All rights reserved.</div>
+            <!-- end row -->
         </div>
-    </div>
-    <!-- SmartMenus jQuery plugin -->
+        <!-- end footer 2 -->
+        <div class="absolute-footer dark medium-text-center small-text-center">
+            <div class="container clearfix">
+                <div class="footer-primary">
+                    <div class="copyright-footer">
+                        <p style="text-align: center">
+                            Copyright &copy; www.decacare.vn. All rights reserved
+                        </p>
+                    </div>
+                </div>
+                <!-- .left -->
+            </div>
+            <!-- .container -->
+        </div>
+        <!-- .absolute-footer -->
+    </footer>
+  @*   <!-- SmartMenus jQuery plugin -->
     <script type="text/javascript" src="~/js/lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="~/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/js/lib/fontawesome-all.min.js"></script>
     <script type="text/javascript" src="~/js/lib/splide.min.js"></script>
-    <script type="text/java script" src="~/js/lib/jquery.smartmenus.js"></script>
+    <script type="text/javascript" src="~/js/lib/jquery.smartmenus.js"></script>
    
     <!-- My custom js -->
-    <script asp-append-version="true" src="~/js/site.js"></script>
+    <script asp-append-version="true" src="~/js/site.js"></script> *@
 
-    @* <script type="text/javascript" src="~/js/lib.min.js"></script>
-    <script type="text/javascript" src="~/js/site.min.js"></script> *@
+    <script type="text/javascript" src="~/js/lib.min.js"></script>
+    <script type="text/javascript" src="~/js/site.min.js"></script>
 
 
   
