--- a/PhongKham/wwwroot/css/newstyle.css
+++ b/PhongKham/wwwroot/css/newstyle.css
@@ -1,216 +1,8 @@
-﻿@charset "UTF-8";
-:root {
+﻿:root {
   --main-color: #005b00;
   --secondary-color: #e7528d;
 }
 
-/*main css*/
-a {
-  margin: 0px;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-a:focus {
-  outline: none !important;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-/* ------------------------------------ */
-h1, h2, h3, h4, h5, h6 {
-  margin: 0px;
-}
-
-p {
-  margin: 0px;
-}
-
-ul, li {
-  margin: 0px;
-  list-style-type: none;
-}
-
-/* ------------------------------------ */
-textarea {
-  display: block;
-  outline: none;
-}
-
-/* ------------------------------------ */
-button {
-  outline: none !important;
-  border: none;
-  background: transparent;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
-iframe {
-  border: none !important;
-}
-
-/*//////////////////////////////////////////////////////////////////
-
-[ Table ]*/
-.limiter {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.container-table100 {
-  width: 100%;
-  min-height: 100vh;
-  background: #c4d3f6;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 33px 30px;
-}
-
-.wrap-table100 {
-  width: 960px;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.table {
-  width: 100%;
-  display: table;
-  margin: 0;
-}
-
-@media screen and (max-width: 768px) {
-  .table {
-    display: block;
-  }
-}
-.row {
-  display: table-row;
-  background: #fff;
-}
-
-.row.header {
-  color: #ffffff;
-  background: #6c7ae0;
-}
-
-@media screen and (max-width: 768px) {
-  .row {
-    display: block;
-  }
-  .row.header {
-    padding: 0;
-    height: 0px;
-  }
-  .row.header .cell {
-    display: none;
-  }
-  .row .cell:before {
-    font-family: Poppins-Bold;
-    font-size: 12px;
-    color: #808080;
-    line-height: 1.2;
-    text-transform: uppercase;
-    font-weight: unset !important;
-    margin-bottom: 13px;
-    content: attr(data-title);
-    min-width: 98px;
-    display: block;
-  }
-}
-.cell {
-  display: table-cell;
-}
-
-@media screen and (max-width: 768px) {
-  .cell {
-    display: block;
-  }
-}
-.row .cell {
-  font-family: Poppins-Regular;
-  font-size: 15px;
-  color: #666666;
-  line-height: 1.2;
-  font-weight: unset !important;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #f2f2f2;
-}
-
-.row.header .cell {
-  font-family: Poppins-Regular;
-  font-size: 18px;
-  color: #fff;
-  line-height: 1.2;
-  font-weight: unset !important;
-  padding-top: 19px;
-  padding-bottom: 19px;
-}
-
-.row .cell:nth-child(1) {
-  width: 55%;
-  padding-left: 40px;
-}
-
-.row .cell:nth-child(2) {
-  width: 30%;
-}
-
-.row .cell:nth-child(3) {
-  width: 15%;
-}
-
-.table, .row {
-  width: 100% !important;
-}
-
-.row:hover {
-  background-color: #ececff;
-  cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .row {
-    border-bottom: 1px solid #f2f2f2;
-    padding-bottom: 18px;
-    padding-top: 30px;
-    padding-right: 15px;
-    margin: 0;
-  }
-  .row .cell {
-    border: none;
-    padding-left: 30px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-  }
-  .row .cell:nth-child(1) {
-    padding-left: 30px;
-  }
-  .row .cell {
-    font-family: Poppins-Regular;
-    font-size: 18px;
-    color: #555555;
-    line-height: 1.2;
-    font-weight: unset !important;
-  }
-  .table, .row, .cell {
-    width: 100% !important;
-  }
-}
-/*nghĩa css*/
 #banner .banner_d .logo,
 #banner .banner_m .logo {
   padding: 10px;
@@ -333,10 +125,9 @@ iframe {
 #smenu .smenu-wrapper img {
   height: 60px;
 }
-#smenu .smenu-wrapper .fa {
-  font-size: 30px;
-  color: var(--main-color);
-  margin-top: -5px;
+#smenu .smenu-wrapper svg {
+  width: 24px;
+  fill: var(--main-color);
 }
 
 #smenu.fix {
@@ -499,6 +290,84 @@ iframe {
   background-color: var(--main-color);
 }
 
-#footer .ft-b {
-  background-color: var(--main-color);
+#footer {
+  background-color: #ebf0f5;
+}
+#footer .footer {
+  padding: 45px 15px 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.13);
+}
+#footer .footer .footer-slogan {
+  position: relative;
+  margin: 0;
+  padding: 0 15px 30px;
+}
+#footer .footer .footer-slogan h3 {
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 0px;
+}
+@media only screen and (min-width: 768px) {
+  #footer .footer .footer-slogan {
+    display: none;
+  }
+}
+#footer .footer .footer-fb {
+  position: relative;
+  margin: 0;
+  padding: 0 15px 30px;
+}
+#footer .footer .footer-fb .widget-title {
+  color: #005b00;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+  position: relative;
+  text-align: left;
+  padding-bottom: 15px;
+  line-height: 1.05;
+  letter-spacing: 0.05em;
+}
+#footer .footer .footer-fb .is-divider {
+  background-color: #78ba2a;
+  max-width: 500px;
+  height: 4px;
+  margin: 1em 0 1em;
+  width: 100%;
+  margin-top: 0.66em;
+}
+#footer .footer .footer-map {
+  position: relative;
+  margin: 0;
+  padding: 0 15px 30px;
+  text-align: right;
+}
+#footer .footer .footer-map .widget-title {
+  color: #005b00;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+  position: relative;
+  text-align: left;
+  padding-bottom: 15px;
+  line-height: 1.05;
+  letter-spacing: 0.05em;
+}
+#footer .footer .footer-map .is-divider {
+  background-color: #78ba2a;
+  max-width: 500px;
+  height: 4px;
+  margin: 1em 0 1em;
+  width: 100%;
+  margin-top: 0.66em;
+  float: right;
+}
+#footer .footer .footer-map iframe {
+  max-width: 500px;
+  width: 100%;
+}
+#footer .absolute-footer {
+  padding-top: 10px;
 }
