--- a/PhongKham/wwwroot/css/newstyle.scss
+++ b/PhongKham/wwwroot/css/newstyle.scss
@@ -1,317 +1,463 @@
 ﻿:root {
-  --main-color: #005b00;
-  --secondary-color: #e7528d;
+    --main-color: #005b00;
+    --secondary-color: #e7528d;
 }
 
 #banner {
-  .banner_d,
-  .banner_m {
-    .logo {
-      padding: 10px;
-
-      a {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        img {
-          height: 60px;
-        }
-        .logo-slogan {
-          h2 {
-            font-size: 24px;
-            font-weight: bold;
-            color: black;
-            margin-top: 12px;
-          }
-        }
-      }
-      .logo-desc {
-        h2 {
-          font-size: 20px;
-          font-weight: bold;
-          margin-top: 10px;
-        }
-        h3 {
-          font-size: 16px;
-          margin: 0px;
-        }
-      }
-    }
-    .banner {
-      text-align: left;
-      padding: 10px;
-      .banner-text {
-        max-width: 500px;
-        margin-top: 17px;
-        h3 {
-          margin: 0;
-          div {
-            font-weight: bold;
-            color: var(--main-color);
-          }
-          span {
-            color: var(--main-color);
-            font-size: 16px;
-          }
-        }
-      }
-      @media only screen and (max-width: 1160px) {
-        .banner-text {
-          margin-top: 10px;
-        }
-      }
-    }
-  }
-  @media (max-width: 768px) {
+    .banner_d,
     .banner_m {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-      padding-bottom: 5px;
-      text-align: left !important;
-      .logo {
-        padding: unset;
-      }
-    }
-  }
-}
-#menu {
-  background-color: var(--main-color);
-  .menu-center {
-    ul {
-      li {
-        ul {
-          background-color: white;
-          li {
+        .logo {
+            padding: 10px;
+
             a {
-              padding-block: 5px !important;
-              color: black !important;
-              display: block;
+                display: flex;
+                align-items: center;
+                gap: 15px;
+
+                img {
+                    height: 60px;
+                }
+
+                .logo-slogan {
+                    h2 {
+                        font-size: 24px;
+                        font-weight: bold;
+                        color: black;
+                        margin-top: 12px;
+                    }
+                }
             }
-            a.highlighted {
-              text-shadow: none !important;
-              background-color: var(--main-color);
-              color: white !important;
+
+            .logo-desc {
+                h2 {
+                    font-size: 20px;
+                    font-weight: bold;
+                    margin-top: 10px;
+                }
+
+                h3 {
+                    font-size: 16px;
+                    margin: 0px;
+                }
             }
-            a:hover {
-              // border-bottom: 1px solid var(--main-color);
-              text-shadow: none !important;
-              background-color: var(--main-color);
-              color: white !important;
-            }
-          }
-          li > * {
-            transition: all 0s !important;
-          }
         }
-      }
-      li.activem {
-        a {
-          color: var(--main-color) !important;
+
+        .banner {
+            text-align: left;
+            padding: 10px;
+
+            .banner-text {
+                max-width: 500px;
+                margin-top: 17px;
+
+                h3 {
+                    margin: 0;
+
+                    div {
+                        font-weight: bold;
+                        color: var(--main-color);
+                    }
+
+                    span {
+                        color: var(--main-color);
+                        font-size: 16px;
+                    }
+                }
+            }
+
+            @media only screen and (max-width: 1160px) {
+                .banner-text {
+                    margin-top: 10px;
+                }
+            }
         }
-      }
     }
-  }
+
+    @media (max-width: 768px) {
+        .banner_m {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            padding-bottom: 5px;
+            text-align: left !important;
+
+            .logo {
+                padding: unset;
+            }
+        }
+    }
 }
+
+#menu {
+    background-color: var(--main-color);
+
+    .menu-center {
+        ul {
+            li {
+                ul {
+                    background-color: white;
+
+                    li {
+                        a {
+                            padding-block: 5px !important;
+                            color: black !important;
+                            display: block;
+                        }
+
+                        a.highlighted {
+                            text-shadow: none !important;
+                            background-color: var(--main-color);
+                            color: white !important;
+                        }
+
+                        a:hover {
+                            // border-bottom: 1px solid var(--main-color);
+                            text-shadow: none !important;
+                            background-color: var(--main-color);
+                            color: white !important;
+                        }
+                    }
+
+                    li > * {
+                        transition: all 0s !important;
+                    }
+                }
+            }
+
+            li.activem {
+                a {
+                    color: var(--main-color) !important;
+                }
+            }
+        }
+    }
+}
+
 #banner .banner_d {
-  align-items: flex-start;
+    align-items: flex-start;
 }
+
 #smenu {
-  background-color: white;
-  border: var(--main-color) 5px solid;
-  box-shadow: 4px 10px 9px 5px lightblue;
-  .smenu-wrapper {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    img {
-      height: 60px;
-    }
-    .fa {
-      font-size: 30px;
-      color: var(--main-color);
-      margin-top: -5px;
-    }
-  }
-}
-#smenu.fix {
-  box-shadow: none;
-}
-#menus {
-  .smenu-menu {
-    @media screen and (max-width: 991px) {
-      ul {
-        background-color: var(--main-color);
-      }
-    }
-  }
-  .smenu-menu {
-    height: unset;
-    ul {
-      li.activem {
-        a {
-          color: var(--main-color) !important;
+    background-color: white;
+    border: var(--main-color) 5px solid;
+    box-shadow: 4px 10px 9px 5px lightblue;
+
+    .smenu-wrapper {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+
+        img {
+            height: 60px;
         }
-      }
+
+        svg{
+            width:24px;
+            fill: var(--main-color);
+        }
     }
-  }
 }
+
+#smenu.fix {
+    box-shadow: none;
+}
+
+#menus {
+    .smenu-menu {
+        @media screen and (max-width: 991px) {
+            ul {
+                background-color: var(--main-color);
+            }
+        }
+    }
+
+    .smenu-menu {
+        height: unset;
+
+        ul {
+            li.activem {
+                a {
+                    color: var(--main-color) !important;
+                }
+            }
+        }
+    }
+}
+
 #menus.fix {
-  top: 80px;
+    top: 80px;
 }
+
 #banner-carousel {
-  padding: 1.5em;
-  .splide__slide {
-    img {
-      width: 100%;
-      aspect-ratio: 5/3;
-      height: auto;
-      object-fit: cover;
+    padding: 1.5em;
+
+    .splide__slide {
+        img {
+            width: 100%;
+            aspect-ratio: 5/3;
+            height: auto;
+            object-fit: cover;
+        }
+
+        div {
+            font-weight: bold;
+            font-size: 20px;
+        }
     }
-    div {
-      font-weight: bold;
-      font-size: 20px;
+
+    .slide-arrow {
+        width: 3em;
+        height: 3em;
     }
-  }
-  .slide-arrow {
-    width: 3em;
-    height: 3em;
-  }
-  .slide-prev {
-    left: 0.5em;
-  }
-  .slide-next {
-    right: 0.5em;
-  }
+
+    .slide-prev {
+        left: 0.5em;
+    }
+
+    .slide-next {
+        right: 0.5em;
+    }
 }
+
 #info,
 #patient {
-  .user-type-portals {
-    align-items: flex-start;
-    .user-type-portals__link-portal {
-      background-color: var(--main-color);
+    .user-type-portals {
+        align-items: flex-start;
 
-      .content {
-        background-color: #f2f2f2;
-        ul {
-          color: black;
-          li {
-            a {
-              color: black;
+        .user-type-portals__link-portal {
+            background-color: var(--main-color);
+
+            .content {
+                background-color: #f2f2f2;
+
+                ul {
+                    color: black;
+
+                    li {
+                        a {
+                            color: black;
+                        }
+
+                        div {
+                            margin-block: 5px;
+                        }
+                    }
+                }
             }
-            div {
-              margin-block: 5px;
+
+            .l_side_block {
+                background-color: var(--main-color);
+
+                a {
+                    border: 1px solid black;
+                    background-color: #f2f2f2;
+                    color: black;
+                }
+
+                a:hover {
+                    background-color: #d3e3fd;
+                }
             }
-          }
         }
-      }
-      .l_side_block {
-        background-color: var(--main-color);
-        a {
-          border: 1px solid black;
-          background-color: #f2f2f2;
-          color: black;
+
+        @media only screen and (min-width: 768px) {
+            .user-type-portals__link-portal {
+                margin-inline: 10px;
+            }
         }
-        a:hover {
-          background-color: #d3e3fd;
-        }
-      }
     }
-    @media only screen and (min-width: 768px) {
-      .user-type-portals__link-portal {
-        margin-inline: 10px;
-      }
-    }
-  }
 }
+
 #news {
-  .tintucyte {
-    border-color: var(--main-color);
-    h2 {
-      color: var(--main-color);
-    }
-  }
-  .news-type,
-  .news-type_m {
-    display: flex;
-    gap: 10px;
-    align-items: stretch;
-    flex-wrap: wrap;
-    margin-bottom: 10px;
-    .news-type-name {
-      display: block;
-      border: 1px solid #bababa;
-      background: rgba(0, 0, 0, 0.06);
-      padding: 10px;
-      border-radius: 5px;
-      text-align: center;
-      cursor: pointer;
-    }
-    .news-type-name:hover {
-      border-color: var(--main-color);
-      background-color: var(--main-color);
-      color: white;
-    }
-  }
-  #news-carousel {
-    .news-inner {
-      display: block;
-      width: 100%;
-      border-bottom: var(--main-color) 1px solid;
-      padding: 10px 0 15px 0;
-      .news-inner-label {
-        a {
-          font-size: 16px;
-          color: black;
-          cursor: pointer;
-        }
-        a:hover {
-          color: red;
-        }
-      }
-    }
-  }
-}
-@media only screen and (min-width: 768px) {
-  .news-type_m {
-    display: none !important;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .news-type {
-    display: none !important;
-  }
-}
-.sidebar-left {
-  .sidebar-menu {
-    li {
-      background-color: var(--main-color);
-      a:hover {
-        text-decoration: underline !important;
-        color: white;
-      }
-    }
-  }
-}
-#center {
-  .ldangnhap {
-    .main-tit {
-      h2 {
-        color: var(--main-color);
+    .tintucyte {
         border-color: var(--main-color);
-      }
+
+        h2 {
+            color: var(--main-color);
+        }
     }
-    .frm-tit {
-      .btn {
-        background-color: var(--main-color);
-      }
+
+    .news-type,
+    .news-type_m {
+        display: flex;
+        gap: 10px;
+        align-items: stretch;
+        flex-wrap: wrap;
+        margin-bottom: 10px;
+
+        .news-type-name {
+            display: block;
+            border: 1px solid #bababa;
+            background: rgba(0, 0, 0, 0.06);
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+            cursor: pointer;
+        }
+
+        .news-type-name:hover {
+            border-color: var(--main-color);
+            background-color: var(--main-color);
+            color: white;
+        }
     }
-  }
+
+    #news-carousel {
+        .news-inner {
+            display: block;
+            width: 100%;
+            border-bottom: var(--main-color) 1px solid;
+            padding: 10px 0 15px 0;
+
+            .news-inner-label {
+                a {
+                    font-size: 16px;
+                    color: black;
+                    cursor: pointer;
+                }
+
+                a:hover {
+                    color: red;
+                }
+            }
+        }
+    }
 }
+
+@media only screen and (min-width: 768px) {
+    .news-type_m {
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .news-type {
+        display: none !important;
+    }
+}
+
+.sidebar-left {
+    .sidebar-menu {
+        li {
+            background-color: var(--main-color);
+
+            a:hover {
+                text-decoration: underline !important;
+                color: white;
+            }
+        }
+    }
+}
+
+#center {
+    .ldangnhap {
+        .main-tit {
+            h2 {
+                color: var(--main-color);
+                border-color: var(--main-color);
+            }
+        }
+
+        .frm-tit {
+            .btn {
+                background-color: var(--main-color);
+            }
+        }
+    }
+}
+
 #footer {
-  .ft-b {
-    background-color: var(--main-color);
-  }
+    background-color: #ebf0f5;
+
+    .footer {
+        padding: 45px 15px 5px;
+        border-bottom: 1px solid rgb(0, 0, 0, 0.13);
+
+        .footer-slogan {
+            position: relative;
+            margin: 0;
+            padding: 0 15px 30px;
+
+            h3 {
+                font-weight: bold;
+                font-size: 20px;
+                margin-top: 0px;
+            }
+        }
+
+        @media only screen and (min-width: 768px) {
+            .footer-slogan {
+                display: none;
+            }
+        }
+
+        .footer-fb {
+            position: relative;
+            margin: 0;
+            padding: 0 15px 30px;
+
+            .widget-title {
+                color: #005b00;
+                font-size: 16px;
+                font-weight: 600;
+                text-transform: uppercase;
+                margin-bottom: 25px;
+                position: relative;
+                text-align: left;
+                padding-bottom: 15px;
+                line-height: 1.05;
+                letter-spacing: 0.05em;
+            }
+
+            .is-divider {
+                background-color: #78ba2a;
+                max-width: 500px;
+                height: 4px;
+                margin: 1em 0 1em;
+                width: 100%;
+                margin-top: 0.66em;
+            }
+        }
+
+        .footer-map {
+            position: relative;
+            margin: 0;
+            padding: 0 15px 30px;
+            text-align: right;
+
+            .widget-title {
+                color: #005b00;
+                font-size: 16px;
+                font-weight: 600;
+                text-transform: uppercase;
+                margin-bottom: 25px;
+                position: relative;
+                text-align: left;
+                padding-bottom: 15px;
+                line-height: 1.05;
+                letter-spacing: 0.05em;
+            }
+
+            .is-divider {
+                background-color: #78ba2a;
+                max-width: 500px;
+                height: 4px;
+                margin: 1em 0 1em;
+                width: 100%;
+                margin-top: 0.66em;
+                float: right;
+            }
+
+            iframe {
+                max-width: 500px;
+                width: 100%;
+            }
+        }
+    }
+
+    .absolute-footer {
+        padding-top: 10px;
+    }
 }
