--- a/PhongKham/wwwroot/css/file/style.css
+++ b/PhongKham/wwwroot/css/file/style.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 /*@import url(https://fonts.googleapis.com/css?family=Roboto:300,400);*/
 @font-face{
-	font-family:womens_icons;src:url(../css/fonts/womens_icons.eot);font-weight:400;font-style:normal
+	font-family:womens_icons;src:url(../fonts/womens_icons.eot);font-weight:400;font-style:normal
 		}
 @font-face{
 	font-family:womens_icons;
-	src:url(../css/fonts/womens_icons.html#womens_icons) format("svg"),
-		url(../css/fonts/womens_iconsd41d.eot?#iefix) format("embedded-opentype"),
-		url(../css/fonts/womens_icons.woff) format("woff"),
-		url(../css/fonts/womens_icons.ttf) format("truetype");
+	src:url(../fonts/womens_icons.html#womens_icons) format("svg"),
+		url(../fonts/womens_iconsd41d.eot?#iefix) format("embedded-opentype"),
+		url(../fonts/womens_icons.woff) format("woff"),
+		url(../fonts/womens_icons.ttf) format("truetype");
 	font-weight:400;
 	font-style:normal
 		}
@@ -19,112 +19,112 @@ html,body,div,span{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical
 /* Font face*/
 @font-face {
     font-family: RCB;
-    src: url('fonts/RobotoCondensedBold.eot');
-    src: url('fonts/RobotoCondensedBold.eot') format('embedded-opentype'),
-         url('fonts/RobotoCondensedBold.woff2') format('woff2'),
-         url('fonts/RobotoCondensedBold.woff') format('woff'),
-         url('fonts/RobotoCondensedBold.ttf') format('truetype'),
-         url('fonts/RobotoCondensedBold.svg#RobotoCondensedBold') format('svg');
+    src: url('../fonts/RobotoCondensedBold.eot');
+    src: url('../fonts/RobotoCondensedBold.eot') format('embedded-opentype'),
+         
+         url('../fonts/RobotoCondensedBold.woff') format('woff'),
+         url('../fonts/RobotoCondensedBold.ttf') format('truetype'),
+         url('../fonts/RobotoCondensedBold.svg#RobotoCondensedBold') format('svg');
 }
 
 @font-face {
     font-family: RCR;
-    src: url('fonts/RobotoCondensedRegular.eot');
-    src: url('fonts/RobotoCondensedRegular.eot') format('embedded-opentype'),
-         url('fonts/RobotoCondensedRegular.woff2') format('woff2'),
-         url('fonts/RobotoCondensedRegular.woff') format('woff'),
-         url('fonts/RobotoCondensedRegular.ttf') format('truetype'),
-         url('fonts/RobotoCondensedRegular.svg#RobotoCondensedRegular') format('svg');
+    src: url('../fonts/RobotoCondensedRegular.eot');
+    src: url('../fonts/RobotoCondensedRegular.eot') format('embedded-opentype'),
+         
+         url('../fonts/RobotoCondensedRegular.woff') format('woff'),
+         url('../fonts/RobotoCondensedRegular.ttf') format('truetype'),
+         url('../fonts/RobotoCondensedRegular.svg#RobotoCondensedRegular') format('svg');
 }
 
 @font-face {
     font-family: RM;
-    src: url('fonts/RobotoMedium.eot');
-    src: url('fonts/RobotoMedium.eot') format('embedded-opentype'),
-         url('fonts/RobotoMedium.woff2') format('woff2'),
-         url('fonts/RobotoMedium.woff') format('woff'),
-         url('fonts/RobotoMedium.ttf') format('truetype'),
-         url('fonts/RobotoMedium.svg#RobotoMedium') format('svg');
+    src: url('../fonts/RobotoMedium.eot');
+    src: url('../fonts/RobotoMedium.eot') format('embedded-opentype'),
+         
+         url('../fonts/RobotoMedium.woff') format('woff'),
+         url('../fonts/RobotoMedium.ttf') format('truetype'),
+         url('../fonts/RobotoMedium.svg#RobotoMedium') format('svg');
 }
 
 @font-face {
     font-family: RR;
-    src: url('fonts/RobotoRegular.eot');
-    src: url('fonts/RobotoRegular.eot') format('embedded-opentype'),
+    src: url('../fonts/RobotoRegular.eot');
+    src: url('../fonts/RobotoRegular.eot') format('embedded-opentype'),
          
-         url('fonts/RobotoRegular.woff') format('woff'),
-         url('fonts/RobotoRegular.ttf') format('truetype'),
-         url('fonts/RobotoRegular.svg#RobotoRegular') format('svg');
+         url('../fonts/RobotoRegular.woff') format('woff'),
+         url('../fonts/RobotoRegular.ttf') format('truetype'),
+         url('../fonts/RobotoRegular.svg#RobotoRegular') format('svg');
 }
 
 @font-face {
     font-family: RB;
-    src: url('fonts/RobotoBold.eot');
-    src: url('fonts/RobotoBold.eot') format('embedded-opentype'),
-         url('fonts/RobotoBold.woff2') format('woff2'),
-         url('fonts/RobotoBold.woff') format('woff'),
-         url('fonts/RobotoBold.ttf') format('truetype'),
-         url('fonts/RobotoBold.svg#RobotoBold') format('svg');
+    src: url('../fonts/RobotoBold.eot');
+    src: url('../fonts/RobotoBold.eot') format('embedded-opentype'),
+         
+         url('../fonts/RobotoBold.woff') format('woff'),
+         url('../fonts/RobotoBold.ttf') format('truetype'),
+         url('../fonts/RobotoBold.svg#RobotoBold') format('svg');
 }
 
 @font-face {
     font-family: RL;
-    src: url('fonts/RobotoLight.eot');
-    src: url('fonts/RobotoLight.eot') format('embedded-opentype'),
-         url('fonts/RobotoLight.woff2') format('woff2'),
-         url('fonts/RobotoLight.woff') format('woff'),
-         url('fonts/RobotoLight.ttf') format('truetype'),
-         url('fonts/RobotoLight.svg#RobotoLight') format('svg');
+    src: url('../fonts/RobotoLight.eot');
+    src: url('../fonts/RobotoLight.eot') format('embedded-opentype'),
+         
+         url('../fonts/RobotoLight.woff') format('woff'),
+         url('../fonts/RobotoLight.ttf') format('truetype'),
+         url('../fonts/RobotoLight.svg#RobotoLight') format('svg');
 }
 
 @font-face {
     font-family: SFBC;
-    src: url('fonts/SFUEurostileBoldCondensed.eot');
-    src: url('fonts/SFUEurostileBoldCondensed.eot') format('embedded-opentype'),
-         url('fonts/SFUEurostileBoldCondensed.woff2') format('woff2'),
-         url('fonts/SFUEurostileBoldCondensed.woff') format('woff'),
-         url('fonts/SFUEurostileBoldCondensed.ttf') format('truetype'),
-         url('fonts/SFUEurostileBoldCondensed.svg#SFUEurostileBoldCondensed') format('svg');
+    src: url('../fonts/SFUEurostileBoldCondensed.eot');
+    src: url('../fonts/SFUEurostileBoldCondensed.eot') format('embedded-opentype'),
+         
+         url('../fonts/SFUEurostileBoldCondensed.woff') format('woff'),
+         url('../fonts/SFUEurostileBoldCondensed.ttf') format('truetype'),
+         url('../fonts/SFUEurostileBoldCondensed.svg#SFUEurostileBoldCondensed') format('svg');
 }
 
 @font-face {
     font-family: SFEC;
-    src: url('fonts/SFUEurostileCondensed.eot');
-    src: url('fonts/SFUEurostileCondensed.eot') format('embedded-opentype'),
-         url('fonts/SFUEurostileCondensed.woff2') format('woff2'),
-         url('fonts/SFUEurostileCondensed.woff') format('woff'),
-         url('fonts/SFUEurostileCondensed.ttf') format('truetype'),
-         url('fonts/SFUEurostileCondensed.svg#SFUEurostileCondensed') format('svg');
+    src: url('../fonts/SFUEurostileCondensed.eot');
+    src: url('../fonts/SFUEurostileCondensed.eot') format('embedded-opentype'),
+         
+         url('../fonts/SFUEurostileCondensed.woff') format('woff'),
+         url('../fonts/SFUEurostileCondensed.ttf') format('truetype'),
+         url('../fonts/SFUEurostileCondensed.svg#SFUEurostileCondensed') format('svg');
 }
 
 @font-face {
     font-family: UAS;
-    src: url('fonts/UTMAmericanSans.eot');
-    src: url('fonts/UTMAmericanSans.eot') format('embedded-opentype'),
-         url('fonts/UTMAmericanSans.woff2') format('woff2'),
-         url('fonts/UTMAmericanSans.woff') format('woff'),
-         url('fonts/UTMAmericanSans.ttf') format('truetype'),
-         url('fonts/UTMAmericanSans.svg#UTMAmericanSans') format('svg');
+    src: url('../fonts/UTMAmericanSans.eot');
+    src: url('../fonts/UTMAmericanSans.eot') format('embedded-opentype'),
+         
+         url('../fonts/UTMAmericanSans.woff') format('woff'),
+         url('../fonts/UTMAmericanSans.ttf') format('truetype'),
+         url('../fonts/UTMAmericanSans.svg#UTMAmericanSans') format('svg');
 }
 
 @font-face {
     font-family: UVTHB;
-    src: url('fonts/UVNHepBold.eot');
-    src: url('fonts/UVNHepBold.eot') format('embedded-opentype'),
-         url('fonts/UVNHepBold.woff2') format('woff2'),
-         url('fonts/UVNHepBold.woff') format('woff'),
-         url('fonts/UVNHepBold.ttf') format('truetype'),
+    src: url('../fonts/UVNHepBold.eot');
+    src: url('../fonts/UVNHepBold.eot') format('embedded-opentype'),
+         
+         url('../fonts/UVNHepBold.woff') format('woff'),
+         url('../fonts/UVNHepBold.ttf') format('truetype'),
          url('fotns/UVNHepBold.svg#UVNHepBold') format('svg');
 }
 
 @font-face {
     font-family: 'SFUFuturaBook';
-    src: url('fonts/SFUFuturaBook.eot');
-    src: url('fonts/SFUFuturaBook.eot') format('embedded-opentype'),
+    src: url('../fonts/SFUFuturaBook.eot');
+    src: url('../fonts/SFUFuturaBook.eot') format('embedded-opentype'),
          
-         url('fonts/SFUFuturaBook.woff') format('woff'),
-         url('fonts/SFUFuturaBook.ttf') format('truetype'),
-         url('fonts/SFUFuturaBook.svg#SFUFuturaBook') format('svg');
+         url('../fonts/SFUFuturaBook.woff') format('woff'),
+         url('../fonts/SFUFuturaBook.ttf') format('truetype'),
+         url('../fonts/SFUFuturaBook.svg#SFUFuturaBook') format('svg');
 }
 
 /*----------basic----------------*/
@@ -265,7 +265,7 @@ body{background: #FFF;}
     }
 #menu.fix{position: fixed; top: 0; left: 0; width: 100%; min-width: 1200px; z-index: 999;}
 .menu-line{position: relative;}
-.menu-line:after{position: absolute; content: ''; right: 0; top: 0; width: 1px; height: 100%; background: url(../assets/icon/line-menu.png) no-repeat left center;}
+.menu-line:after{position: absolute; content: ''; right: 0; top: 0; width: 1px; height: 100%; background: url(../../assets/icon/line-menu.png) no-repeat left center;}
     .menu-line:first-child:before {
         position: absolute;
         content: '';
@@ -273,7 +273,7 @@ body{background: #FFF;}
         top: 0;
         width: 1px;
         height: 100%;
-        background: url(../assets/icon/line-menu.png) no-repeat left center;
+        background: url(../../assets/icon/line-menu.png) no-repeat left center;
     }
 
 /* Slide */
