--- a/PhongKham/Views/Home/Index.cshtml
+++ b/PhongKham/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<link rel="stylesheet" href="~/css/home-bundle.min.css" />
 <div id="banner-carousel"
      class="splide margin2s"
      aria-label="Beautiful Images">
@@ -190,3 +190,4 @@
         </div>
     </div>
 </div>
+<script src="~/js/home-bundle.min.js"></script>
