--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -45,12 +45,13 @@
           href="~/css/lib/fontawesome-all.min.css"
            /> *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="~/css/style.css" />
+    @* <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/newstyle.css" />
     <link rel="stylesheet" href="~/css/lib/splide.min.css" />
     <link rel="stylesheet" href="~/css/lib/sm-core-css.css" />
     <link rel="stylesheet" href="~/css/lib/sm-blue.css" />
-    <link href="~/css/lib/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/lib/bootstrap.min.css" rel="stylesheet" type="text/css" /> *@
+    
     <!-- SmartMenus core CSS (required) -->
    @*  <link href="~/css/lib/sm-core-css.css" rel="stylesheet" type="text/css" />
     <!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
@@ -73,7 +74,7 @@
         <div id="banner">
             <div class="center banner_d">
                 <div class="logo">
-                    <a href="index.html">
+                    <a asp-controller="Home" asp-action="Index">
                         <img src="~/assets/hinhanh/decaCare_5_anhlogo.png" alt="Logo" />
                         <div class="logo-slogan">
                             <h2>PHÍA SAU UNG THƯ LÀ CUỘC SỐNG</h2>
@@ -115,10 +116,12 @@
             <div class="menu-center">
                 <ul id="main-menu" class="sm sm-blue">
                     <li class="menu-line activem">
-                        <a href="index.html">Trang chủ</a>
+                        @* <a href="index.html">Trang chủ</a> *@
+                        @Html.ActionLink("Trang chủ", "Index", "Home")
                     </li>
                     <li class="menu-line">
-                        <a href="gioi-thieu.html">Thương hiệu</a>
+                        @* <a href="gioi-thieu.html">Thương hiệu</a> *@
+                        @Html.ActionLink("Thương hiệu", "Index", "GioiThieu")
                         <ul>
                             <li>
                                 <a href="gioi-thieu/gioi-thieu-benh-vien-967/index.html">Giới thiệu bệnh viện</a>
@@ -500,10 +503,12 @@
             <div class="smenu-menu">
                 <ul id="main-menus" class="sm sm-blue">
                     <li class="menu-line activem">
-                        <a href="index.html">Trang chủ </a>
+                        @* <a href="index.html">Trang chủ </a> *@
+                        @Html.ActionLink("Trang chủ", "Index", "Home")
                     </li>
                     <li class="menu-line">
-                        <a href="gioi-thieu.html">Thương hiệu</a>
+                        @* <a href="gioi-thieu.html">Thương hiệu</a> *@
+                        @Html.ActionLink("Thương hiệu", "Index", "GioiThieu")
                         <ul>
                             <li>
                                 <a href="gioi-thieu/gioi-thieu-benh-vien-967/index.html">Giới thiệu bệnh viện</a>
@@ -791,7 +796,7 @@
             
         </main>
     
-    <div id="back-top" style="cursor: pointer; border-radius: 50%;" title="Len Dau Trang."></div>
+    <div id="back-top" style="cursor: pointer; border-radius: 50%;z-index:9999" title="Len Dau Trang."></div>
     <footer id="footer">
         <!-- FOOTER 1 -->
         <!-- FOOTER 2 -->
@@ -872,9 +877,11 @@
     <!-- My custom js -->
     <script asp-append-version="true" src="~/js/site.js"></script> *@
 
-    <script type="text/javascript" src="~/js/lib.min.js"></script>
-    <script type="text/javascript" src="~/js/site.min.js"></script>
-
+    
+    
+    
+    @* <script src="~/js/shared.js"></script>
+    <script src="~/js/file/home.js"></script> *@
 
   
 
