tao controller account

--- a/PhongKham/Views/Home/Index.cshtml
+++ b/PhongKham/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="~/css/home-bundle.min.css" />
+﻿<link rel="stylesheet" href="~/css/lib/splide.min.css" />
 <div id="banner-carousel"
      class="splide margin2s"
      aria-label="Beautiful Images">
