--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
     @* <link href="~/css/lib.min.css" rel="stylesheet" type="text/css" />
 
     <link href="~/css/site.min.css" rel="stylesheet" type="text/css" /> *@
-
+    <link rel="stylesheet" href="~/css/common.min.css" />
 
 </head>
 <body>
@@ -462,7 +462,7 @@
                       </ul>
                     </li> -->
                     <li class="menu-line">
-                        <a href="dang-nhap.html"><i class="fa fa-user"></i> &nbsp; Đăng nhập</a>
+                        @Html.ActionLink("Đăng nhập", "Index", "Account")
                     </li>
                     <!-- <li class="menu-line">
                       <a href="index.html"
