--- a/PhongKham/Views/Account/Index.cshtml
+++ b/PhongKham/Views/Account/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<div id="center" class="center w-clear margin2s">
+﻿
+<div id="center" class="center w-clear margin2s">
     <div class="hidden-xs hidden-sm">
         <aside class="g_quarter col-md-3 col-lg-3 col-xs-12 col-sm-12">
             <div class="sidebar-left">
@@ -33,7 +34,7 @@
                 <div class="form-group form-footer">
                     <p>
                         Bạn chưa có tài khoản?
-                        <a href="dang-ky" title="Bạn chưa có tài khoản?">Click vào đây!</a>
+                        <a asp-action="DangKy">Click vào đây!</a>
                     </p>
                     <input class="btn btn-default"
                            id="btn-dangnhap"
@@ -55,3 +56,5 @@
         </aside>
     </div>
 </div>
+<script src="~/js/account-bundle.min.js"></script>
+
