--- a/PhongKham/wwwroot/css/file/newstyle.scss
+++ b/PhongKham/wwwroot/css/file/newstyle.scss
@@ -364,6 +364,10 @@
             .btn {
                 background-color: var(--main-color);
             }
+
+            .form-group {
+                margin-inline: 0px !important;
+            }
         }
     }
 }
