--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -463,7 +463,7 @@
                       </ul>
                     </li> -->
                     <li class="menu-line">
-                        @Html.ActionLink("Đăng nhập", "Index", "Account", new { slug = 1 }, null)
+                        @Html.ActionLink("Đăng nhập", "Index", "Account")
                     </li>
                     <!-- <li class="menu-line">
                       <a href="index.html"
@@ -783,7 +783,7 @@
                         </ul>
                     </li>
                     <li class="menu-line">
-                        @Html.ActionLink("Đăng nhập", "Index", "Account")
+                        <a asp-asp-controller="Account" asp-action="Index" >Đăng nhập</a>
                     </li>
                 </ul>
             </div>
