thêm modal quên mật khẩu

--- a/PhongKham/Views/Account/DangKy.cshtml
+++ b/PhongKham/Views/Account/DangKy.cshtml
@@ -1,4 +1,5 @@
-﻿<div id="center" class="center w-clear margin2s">
+﻿<section style="margin-top:25px">
+<div id="center" class="center w-clear margin2s">
     <div class="hidden-xs hidden-sm">
         <aside class="g_quarter col-md-3 col-lg-3 col-xs-12 col-sm-12">
             <div class="sidebar-left">
@@ -78,3 +79,4 @@
     </div>
 </div>
 <script src="~/js/account-bundle.min.js"></script>
+</section>
