--- a/PhongKham/Views/Home/Index.cshtml
+++ b/PhongKham/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<link rel="stylesheet" href="~/css/lib/splide.min.css" />
+﻿<section>
+<link rel="stylesheet" href="~/css/lib/splide.min.css" />
 <div id="banner-carousel"
      class="splide margin2s"
      aria-label="Beautiful Images">
@@ -191,3 +192,4 @@
     </div>
 </div>
 <script src="~/js/home-bundle.min.js"></script>
+</section>
