--- a/PhongKham/Views/Account/Index.cshtml
+++ b/PhongKham/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<section style="margin-top:25px">
 <div id="center" class="center w-clear margin2s">
     <div class="hidden-xs hidden-sm">
         <aside class="g_quarter col-md-3 col-lg-3 col-xs-12 col-sm-12">
@@ -41,7 +41,7 @@
                            type="submit"
                            value="Đăng nhập" />
                     <span class="qmk">
-                        <a href="quen-mat-khau" title="Quên mật khẩu?">Quên mật khẩu?</a>
+                            <a data-toggle="modal" data-target="#ModalFP">Quên mật khẩu?</a>
                     </span>
                 </div>
                 <input type="hidden" name="dangnhap" />
@@ -56,5 +56,67 @@
         </aside>
     </div>
 </div>
+<div
+      class="modal fade"
+      id="ModalFP"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="myModalLabel"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title"><b>Quên mật khẩu</b></h4>
+          </div>
+          <div class="modal-body">
+            <form id="FPForm">
+              <div class="form-group">
+                <label class="field-name"
+                  >Nhập Email <span class="req">*</span></label
+                >
+                <input
+                  class="form-control"
+                  type="email"
+                  placeholder="Nhập Email"
+                  name="email"
+                  required=""
+                />
+              </div>
+              <input
+                id="FPForm-submit"
+                class="btn btn-default"
+                type="submit"
+                value="Gửi"
+              />
+            </form>
+            <form id="OTPForm">
+              <div class="form-group">
+                <label class="field-name"
+                  >Nhập OTP <span class="req">*</span></label
+                >
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Nhập OTP"
+                  name="OTP"
+                  required=""
+                />
+                <input class="btn btn-default" type="submit" value="Gửi" />
+              </div>
+              <div><a>Gửi lại mã OTP</a></div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 <script src="~/js/account-bundle.min.js"></script>
+</section>
 
