--- a/PhongKham/Views/GioiThieu/Index.cshtml
+++ b/PhongKham/Views/GioiThieu/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<section style="margin-top:25px">
 <div id="center" class="center w-clear margin2s">
     <div class="hidden-xs hidden-sm">
         <aside class="g_quarter col-md-3 col-lg-3 col-xs-12 col-sm-12">
@@ -766,3 +766,4 @@
     </div>
 </div>
 <script src="~/js/gioithieu-bundle.min.js"></script>
+</section>
