--- a/PhongKham/wwwroot/css/file/newstyle.scss
+++ b/PhongKham/wwwroot/css/file/newstyle.scss
@@ -353,6 +353,9 @@
 
 #center {
     .ldangnhap {
+        a{
+            cursor:pointer;
+        }
         .main-tit {
             h2 {
                 color: var(--main-color);
@@ -368,6 +371,32 @@
             .form-group {
                 margin-inline: 0px !important;
             }
+        }
+    }
+    .news-content {
+        margin-top:5px
+    }
+}
+#ModalFP {
+    top: 15%;
+    a{
+        cursor:pointer;
+    }
+
+    #OTPForm {
+        display: none;
+        margin-top: 10px;
+        
+
+        input[type="text"] {
+            display: inline;
+            width: 200px;
+            margin-bottom: 5px;
+            margin-inline:5px;
+        }
+
+        input[type="submit"] {
+            margin-top: -1px;
         }
     }
 }
