login với secction

--- a/PhongKham/Views/Home/Index.cshtml
+++ b/PhongKham/Views/Home/Index.cshtml
@@ -110,10 +110,10 @@
         <div class="news-type-name">Văn bản</div>
         <div class="news-type-name">Thông báo</div>
         <div class="news-type-name">Thư mời</div> *@
-        @for (int i = 0; i < Model.Count; i++)
+        @* @for (int i = 0; i < Model.Count; i++)
         {
             <div class="news-type-name">@Model[i].Ten</div>
-        }
+        } *@
     </div>
     <div class="col-md-12 news-type_m">
         <div id="newstype-carousel"
