--- a/PhongKham/Views/Account/Index.cshtml
+++ b/PhongKham/Views/Account/Index.cshtml
@@ -11,16 +11,17 @@
         <div class="main-tit"><h2>Đăng nhập</h2></div>
         <div class="frm-tit">
             <form name="dangnhap"
-                  action="#"
-                  method="post"
+                  action="/Account/Login"
+                  method="Post"
                   class="form-horizontal"
                   onsubmit="$('#btn-dangnhap').val('Vui lòng đợi...')">
+                    @Html.AntiForgeryToken()
                 <div class="form-group">
                     <label class="field-name">Tên tài khoản <span class="req">*</span></label>
                     <input class="form-control"
                            type="text"
-                           placeholder="Nhập tài khoản"
-                           name="username"
+                           placeholder="Nhập số điện thoại"
+                           name="Sdt"
                            required="" />
                 </div>
                 <div class="form-group">
@@ -28,7 +29,7 @@
                     <input class="form-control"
                            type="password"
                            placeholder="Nhập mật khẩu"
-                           name="password"
+                           name="PassWord"
                            required="" />
                 </div>
                 <div class="form-group form-footer">
