--- a/PhongKham/wwwroot/css/file/newstyle.css
+++ b/PhongKham/wwwroot/css/file/newstyle.css
@@ -282,8 +282,14 @@
   color: white;
 }
 
-#center .ldangnhap a {
-  cursor: pointer;
+#center .news-content ul {
+  padding-left: 0px;
+}
+#center .news-content ul li a {
+  color: #337ab7;
+}
+#center .news-content ul li a:hover {
+  color: #23527c;
 }
 #center .ldangnhap .main-tit h2 {
   color: var(--main-color);
@@ -295,15 +301,29 @@
 #center .ldangnhap .frm-tit .form-group {
   margin-inline: 0px !important;
 }
-#center .news-content {
-  margin-top: 5px;
+#center .ldangnhap .frm-tit .qmk a {
+  color: #337ab7;
+  cursor: pointer;
+}
+#center .ldangnhap .frm-tit .qmk a:hover {
+  color: #23527c;
+}
+
+.form-group {
+  margin-inline: 0px !important;
+  margin-right: -15px;
+  margin-left: -15px;
+  margin-bottom: 15px;
+}
+.form-group label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: 700;
 }
 
 #ModalFP {
   top: 15%;
-}
-#ModalFP a {
-  cursor: pointer;
 }
 #ModalFP #OTPForm {
   display: none;
@@ -313,10 +333,17 @@
   display: inline;
   width: 200px;
   margin-bottom: 5px;
-  margin-inline: 5px;
 }
 #ModalFP #OTPForm input[type=submit] {
   margin-top: -1px;
+}
+#ModalFP #OTPForm a {
+  color: #337ab7;
+  cursor: pointer;
+}
+#ModalFP #OTPForm a:hover {
+  color: #23527c;
+  text-decoration: underline !important;
 }
 
 #footer {
@@ -399,4 +426,7 @@
 }
 #footer .absolute-footer {
   padding-top: 10px;
+}
+#footer .absolute-footer p {
+  margin-bottom: 0px !important;
 }
