làm authentication, chia role theo phương thức mặc định của asp core

--- a/PhongKham/Views/Account/Index.cshtml
+++ b/PhongKham/Views/Account/Index.cshtml
@@ -119,5 +119,14 @@
       </div>
     </div>
 <script src="~/js/account-bundle.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            var message = '@Html.Raw(TempData["Message"])';
+            if (message.length > 0) {
+                alert(message);
+            }
+        });
+    </script>
+
 </section>
 
